--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,16 @@
-* {
-  box-sizing:border-box;
-  margin: 0;
-  padding: 0;
-}
-
+/* ______________  BANNER ______________ */
 header {
   width: 100%;
   height: 100vh;
   position: relative;
+}
+
+.logo {
+  position: absolute;
+  z-index: 1;
+  width: 120px;
+  left: 40px;
+  top: 20px;
 }
 
 .slideshow-container {
@@ -17,13 +20,21 @@ header {
   margin: auto;
 }
 
-.mySlides {
+.mySlides { 
   display: none;
   height: 100vh;
+  position: relative; 
 }
 
 .mySlides img {
   height: 100vh;
+}
+
+.mySlides button {
+  cursor: pointer;
+  border: none;
+  outline: transparent;
+  background: transparent;
 }
 
 .prev, .next {
@@ -74,7 +85,276 @@ header {
   background-color: #717171;
 }
 
-/* Fading animation */
+/* ______________ END OF BANNER ______________  */
+
+
+
+/* ______________ CONTENT ______________  */
+.container {
+  min-width: 80%;
+  max-width: 1024px;
+  margin: auto;
+  padding: 40px 0;
+}
+
+/* Suggestions */
+
+.new {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.new-title {
+  font-size: 24px;
+  color: #6A6A6A; 
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.new-boxes {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.new-box {
+  width: calc((100% - 40px ) / 3);
+  height: 300px;
+  background-color: black;
+  position: relative;
+  transition: all .3s;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.11);
+  border: none;
+  cursor: pointer;
+}
+
+.new-box:hover {
+  transform: scale(0.99);
+}
+
+.new-box img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.new-box-content {
+  width: 42%;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  background-color: rgba(0,0,0,0.6);
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+
+.new-box-content h3 {
+  font-size: 22px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.new-box-content span {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.new-box-price {
+  width: 100%;
+  padding: 10px 0;
+  align-items: center;
+  background-color: #FFC700;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.new-box-price p {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.new-box-check {
+  color: white;
+  font-size: 14px;
+  width: 98%;
+  border: 1px solid white;
+  padding: 6px 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+/* Categories */
+
+.categories {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 40px 0;
+}
+
+.category-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 20px 0;
+}
+
+.category-box h3 {
+  width: fit-content;
+  font-size: 24px;
+  color: #6A6A6A; 
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  padding: 10px 0;
+  border-bottom: 4px solid #3981A7;
+}
+.category-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: relative;
+}
+
+.category-item {
+  width: calc((100% - 40px) / 4);
+  height: 220px;
+  background-color: red;
+  cursor: pointer;
+  transition: all .3s;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.09);
+}
+
+.category-item:hover {
+  transform: scale(0.99);
+}
+
+.category-item img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+/* Brands */
+
+.brand {
+  padding: 40px 0 80px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.brand h3 {
+  font-size: 24px;
+  color: #6A6A6A; 
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+
+.brands-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.brand-img {
+  width: calc((100% - 120px) / 5);
+  transition: all .3s;
+  cursor: pointer;
+}
+
+.brand-img:hover {
+  transform: scale(.99);
+}
+
+/* ______________ END OF CONTENT ______________  */
+
+
+
+/* ______________ FOOTER ______________  */
+
+footer {
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  position: relative;
+
+}
+
+.map {
+  width: 50%;
+  position: relative;
+}
+
+.map img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.contact {
+  background-color: #6A6A6A;
+  width: 50%;
+  padding: 80px 60px;
+}
+
+.contact h3 {
+  font-size: 35px;
+  color: white;
+  width: fit-content;
+  padding: 0 0 10px 0;
+  border-bottom: 4px solid #FFC700;
+  margin-bottom: 40px;
+}
+
+.contact-data {
+  width: 100%;
+  padding: 30px 0;
+}
+
+.data {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.data-image {
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  margin-right: 20px;
+}
+
+.data-image img {
+  height: 25px;
+}
+
+.data p {
+  color: white;
+  font-size: 17px;
+}
+
+
+
+
+
+
+/* ______________ ANIMATIONS ______________  */
+
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
