--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,10 +20,10 @@ header {
   margin: auto;
 }
 
-.mySlides { 
+.mySlides {
   display: none;
   height: 100vh;
-  position: relative; 
+  position: relative;
 }
 
 .mySlides img {
@@ -37,7 +37,8 @@ header {
   background: transparent;
 }
 
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -56,7 +57,8 @@ header {
   right: 0;
   border-radius: 25px 0 0 25px;
 }
-.prev:hover, .next:hover {
+.prev:hover,
+.next:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
@@ -81,13 +83,12 @@ header {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
 
 /* ______________ END OF BANNER ______________  */
-
-
 
 /* ______________ CONTENT ______________  */
 .container {
@@ -110,7 +111,7 @@ header {
 
 .new-title {
   font-size: 24px;
-  color: #6A6A6A; 
+  color: #6a6a6a;
   text-transform: uppercase;
   margin-bottom: 30px;
 }
@@ -122,12 +123,12 @@ header {
 }
 
 .new-box {
-  width: calc((100% - 40px ) / 3);
+  width: calc((100% - 40px) / 3);
   height: 300px;
   background-color: black;
   position: relative;
-  transition: all .3s;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.11);
+  transition: all 0.3s;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.11);
   border: none;
   cursor: pointer;
 }
@@ -148,7 +149,7 @@ header {
   position: absolute;
   right: 0;
   height: 100%;
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   padding: 0 20px;
   display: flex;
   flex-direction: column;
@@ -173,7 +174,7 @@ header {
   width: 100%;
   padding: 10px 0;
   align-items: center;
-  background-color: #FFC700;
+  background-color: #ffc700;
   border-radius: 5px;
   margin-bottom: 20px;
 }
@@ -213,11 +214,11 @@ header {
 .category-box h3 {
   width: fit-content;
   font-size: 24px;
-  color: #6A6A6A; 
+  color: #6a6a6a;
   text-transform: uppercase;
   margin-bottom: 30px;
   padding: 10px 0;
-  border-bottom: 4px solid #3981A7;
+  border-bottom: 4px solid #3981a7;
 }
 .category-items {
   display: flex;
@@ -231,8 +232,8 @@ header {
   height: 220px;
   background-color: red;
   cursor: pointer;
-  transition: all .3s;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.09);
+  transition: all 0.3s;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.09);
 }
 
 .category-item:hover {
@@ -259,7 +260,7 @@ header {
 
 .brand h3 {
   font-size: 24px;
-  color: #6A6A6A; 
+  color: #6a6a6a;
   text-transform: uppercase;
   margin-bottom: 50px;
 }
@@ -272,17 +273,15 @@ header {
 
 .brand-img {
   width: calc((100% - 120px) / 5);
-  transition: all .3s;
+  transition: all 0.3s;
   cursor: pointer;
 }
 
 .brand-img:hover {
-  transform: scale(.99);
+  transform: scale(0.99);
 }
 
 /* ______________ END OF CONTENT ______________  */
-
-
 
 /* ______________ FOOTER ______________  */
 
@@ -291,7 +290,6 @@ footer {
   width: 100%;
   display: flex;
   position: relative;
-
 }
 
 .map {
@@ -306,7 +304,7 @@ footer {
 }
 
 .contact {
-  background-color: #6A6A6A;
+  background-color: #6a6a6a;
   width: 50%;
   padding: 80px 60px;
 }
@@ -316,7 +314,7 @@ footer {
   color: white;
   width: fit-content;
   padding: 0 0 10px 0;
-  border-bottom: 4px solid #FFC700;
+  border-bottom: 4px solid #ffc700;
   margin-bottom: 40px;
 }
 
@@ -348,10 +346,14 @@ footer {
   font-size: 17px;
 }
 
-
-
-
-
+.adm {
+  position: absolute;
+  bottom: 5px;
+  right: 10px;
+  color: rgb(156, 156, 156);
+  font-size: 13px;
+  cursor: pointer;
+}
 
 /* ______________ ANIMATIONS ______________  */
 
@@ -363,11 +365,19 @@ footer {
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
