--- a/src/styles/edit.css
+++ b/src/styles/edit.css
@@ -1,130 +1,141 @@
-.fundo{
-    background-color: #dfdfdf;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.fundo {
+  background-color: #dfdfdf;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.container{
-    display: flex;
-    width: 70%;
-    height: 80%;
-  
-    background-color: #ffffff;
-    border-radius: 5px;
-}
-.barra-titulo{
-    position: relative;
-    display: flex;
-    background: #3981a7;
-    width: 100%;
-    height: 15%;
-    justify-content: center;
-    align-items: center;
+.container {
+  display: flex;
+  width: 70%;
+  height: 80%;
+  flex-direction: column;
 
-    border-radius: 5px 5px 0 0;
+  background-color: #ffffff;
+  border-radius: 5px;
 }
-h1{
-    color: #ffffff;
-    font-weight: lighter;
+.barra-titulo {
+  position: relative;
+  display: flex;
+  background: #3981a7;
+  width: 100%;
+  height: 15%;
+  justify-content: center;
+  align-items: center;
 
+  border-radius: 5px 5px 0 0;
 }
-.botao-voltar{
-    display: flex;
-    align-items: center;
-    position: absolute;
-    left: 40px;
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: bold;
+h1 {
+  color: #ffffff;
+  font-weight: lighter;
 }
-span{
-    margin-left: 4px;
+.botao-voltar {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 40px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all .4s;
+  text-decoration: none;
 }
-img{
-    width: 20px;
-    height: 30px;
-}
-.inputs{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-.imagem{
-    display: flex;
-    position: absolute;
-    width: 300px;
-    height: 290px;
-    background: #c4c4c4;
-    align-items: center;
-    justify-content: center;
-    left: 245px;
-    top: 200px;
-}
-#imagem-produto{
-    width: 100px;
-    height: 100px;
-}
-#nome-produto{
-    position: absolute;
-    width: 35%;
-    height: 7.5%;
-    right: 245px;
-    top: 200px;
-    padding: 0 10px;
-    
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 2px solid #3981a7;
-    outline: transparent;
 
-    font-size: 20px;
+.botao-voltar:hover {
+  transform: scale(0.99);
 }
-#descricao-produto{
-    position: absolute;
-    width: 35%;
-    height: 23%;
-    right: 245px;
-    top: 270px;
-    padding: 0 0 105px 10px;
-  
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 2px solid #3981a7;
-    outline: transparent;
+span {
+  margin-left: 4px;
+}
+img {
+  width: 20px;
+  height: 30px;
+}
+.body {
+  width: 100%;
+  height: 100%;
+  padding: 0 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+}
+.inputs {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+.imagem {
+  display: flex;
+  width: 300px;
+  height: 290px;
+  background: #c4c4c4;
+  align-items: center;
+  justify-content: center;
+}
+#imagem-produto {
+  width: 100px;
+  height: 100px;
+}
+#nome-produto {
+  width: 100%;
+  margin-bottom: 20px;
+  height: 40px;
+  padding: 0 10px;
 
-    font-size: 20px;
-}
-#valor-produto{
-    position: absolute;
-    width: 15%;
-    height: 7.5%;
-    right: 375px;
-    top: 440px;
-    padding: 0 10px;;
-  
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 2px solid #3981a7;
-    outline: transparent;
-  
-    font-size: 20px;
-}
-::placeholder{
-    font-size: 20px;
-    color: #acacac;
-}
-.adicionar{
-    position: absolute;
-    width: 180px;
-    height: 50px;
-    top: 510px;
-    left: 575px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 2px solid #3981a7;
+  outline: transparent;
 
-    background: #36803E;
-    border-radius: 5px;
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 20px;
+  font-size: 20px;
+}
+#descricao-produto {
+  width: 100%;
+  height: 150px;
+  padding: 10px 10px;
+  margin-bottom: 20px;
+
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 2px solid #3981a7;
+  outline: transparent;
+
+  font-size: 20px;
+}
+#valor-produto {
+  width: 100%;
+  height: 40px;
+  padding: 0 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 2px solid #3981a7;
+  outline: transparent;
+  resize: none;
+  font-size: 20px;
+}
+::placeholder {
+  font-size: 20px;
+  color: #acacac;
+}
+.adicionar {
+  position: absolute;
+  width: 160px;
+  height: 50px;
+  bottom: 30px;
+  left: calc(50% - 80px);
+
+  background: #36803e;
+  border-radius: 5px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  transition: transform .3s;
+}
+
+.adicionar:hover {
+  transform: scale(0.99);
 }
