--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -36,7 +36,8 @@
   height: 7.5%;
   left: 58%;
   bottom: 50%;
-  padding: 0 10px;;
+  padding: 0 10px;
+  outline: transparent;
 
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -52,6 +53,7 @@
   left: 58%;
   bottom: 38%;
   padding: 0 10px;
+  outline: transparent;
 
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -66,6 +68,10 @@
   height: 7.5%;
   left: 58%;
   bottom: 26%;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   background: #FFC700;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -74,7 +80,14 @@
   text-align: center;
 
   font-size: 16px;
+  transition: all .3s;
 }
+
+.button-logar:hover {
+  transform: scale(0.99);
+}
+
+
 h1{
   position: absolute;
   width: 8.5%;
